--- a/package.json
+++ b/package.json
@@ -5,11 +5,42 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "eslint --fix src/. && echo 'Lint complete.'",
+    "test": "node -r @babel/register src/index.test.js | tap-nirvana",
+    "watch": "watch 'clear && npm run -s test && npm run -s lint' src"
   },
   "dependencies": {
+    "cuid": "^2.1.8",
+    "grommet": "^2.15.2",
+    "grommet-icons": "^4.5.0",
     "next": "9.5.3",
+    "next-redux-wrapper": "^6.0.2",
+    "polished": "^4.0.3",
+    "prop-types": "^15.7.2",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "react-redux": "^7.2.2",
+    "redux": "^4.0.5",
+    "redux-logger": "^3.0.6",
+    "redux-saga": "^1.1.3",
+    "styled-components": "^5.2.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.11.6",
+    "@babel/plugin-transform-runtime": "^7.11.5",
+    "@babel/preset-env": "^7.11.5",
+    "@babel/preset-react": "^7.10.4",
+    "@babel/register": "^7.11.5",
+    "@babel/runtime-corejs2": "^7.11.2",
+    "eslint": "^7.8.1",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "^7.20.6",
+    "eslint-plugin-react-hooks": "^4.1.2",
+    "prettier": "^2.1.1",
+    "riteway": "6.2.0",
+    "tap-nirvana": "^1.1.0",
+    "watch": "^1.0.2"
   }
 }
